--- a/config.json
+++ b/config.json
@@ -1,11 +1,5 @@
 {
   "849810190613086258": {
-    "banLimit": 3,
-    "chaDelLimit": 3,
-    "chaCrLimit": 3,
-    "roleDelLimit": 3,
-    "kickLimits": 3,
-    "roleCrLimits": 3,
-    "time": 30
+    "onoff": true
   }
 }
